# ros2_yolo_cpp

./: .gitignore  CMakeLists.txt  README.md  bash.md  bash2.md  bash3.md  bash_final.md  demo.launch.py  fake_detector.cpp  record_demo.sh  test_video.avi  visualizer.cpp
camera/: image_raw.cpp
include/: yolo_wrapper.hpp
msg/: BoundingBox.msg  CMakeLists.txt  DetectionArray.msg  bash.md
my_cv_pkg/: CMakeLists.txt  CMakeLists2.txt  package.xml
my_cv_pkg/launch/: demo.launch.py
my_cv_pkg/scr/: camera_publisher.cpp  image_subscriber.cpp
my_cv_pkg/src/: camera_publisher.cpp  fake_detector.cpp  image_saver.cpp  image_subscriber.cpp  visualizer.cpp
my_msgs/: CMakeLists.txt  package.xml
my_msgs/msg/: BoundingBox.msg  DetectionArray.msg
src/: camera_publisher.cpp  image_subscriber.cpp
src/scripts/: install_deps.sh  run_demo.sh
