<?xml version="1.0"?>
<package format="3">
  <name>my_cv_pkg</name>
  <version>0.0.0</version>
  <description>YOLO detection package for ROS2 Jazzy</description>
  <maintainer email="ros2user@example.com">ros2user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>my_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
